fix horizontal scrollbar in overflow-popup

--- a/public/popup.css
+++ b/public/popup.css
@@ -25,6 +25,11 @@
 @media only screen and (max-width: 600px) {
   #sponsorBlockPopupBody {
     width: 100%; 
+    max-width: fit-content;
+    overflow-x: hidden;
+  }
+  #sponsorblockPopup {
+    max-width: fit-content;
   }
 }
 
